src/objects/Opportunity_Reservable__c.object
<CustomObject>
    <fields>
        <fullName>Conference_Room_Credits__c</fullName>
        <label>Conference Room Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Won__c</fullName>
        <formula>IF(Opportunity__r.IsWon =True, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Won</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment_Method__c</fullName>
        <label>Monthly Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Price__c</fullName>
        <label>Monthly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Prints_Copies_B_W__c</fullName>
        <label>Monthly Prints/Copies B&amp;W</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Prints_Copies_Color__c</fullName>
        <label>Monthly Prints/Copies Color</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Building__c</fullName>
        <formula>Opportunity__r.Building__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Building</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Offices</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Paperwork_Signed__c</fullName>
        <formula>IF(ISPICKVAL(Opportunity__r.StageName, &quot;Contract Signed&quot;), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paperwork Signed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Desks__c</fullName>
        <label>Pending Desks</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prints_B_W_and_Color__c</fullName>
        <formula>&quot;B&amp;W: &quot;&amp; TEXT(Monthly_Prints_Copies_B_W__c) &amp;&quot; Color: &quot;&amp; TEXT(Monthly_Prints_Copies_Color__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prints B&amp;W and Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservable__c</fullName>
        <label>Reservable</label>
        <referenceTo>Reservable__c</referenceTo>
        <relationshipLabel>Opportunity Reservables</relationshipLabel>
        <relationshipName>Opportunity_Offices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Security_Deposit__c</fullName>
        <label>Security Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Opportunity Reservable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OO-{0000}</displayFormat>
        <label>Office ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Reservables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bed_Residential_Units_Reservation</fullName>
        <active>true</active>
        <description>Can not reserve bed can not be reserved until further notice.</description>
        <errorConditionFormula>OR(ISPICKVAL(Reservable__r.Office_Work_Station_Type__c, &quot;Bed&quot;),ISPICKVAL(Reservable__r.Office_Work_Station_Type__c, &quot;ResidentialUnit&quot;))</errorConditionFormula>
        <errorDisplayField>Reservable__c</errorDisplayField>
        <errorMessage>Bed and Residential Units are currently not available for reservation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_select_HotDesk_Reservables</fullName>
        <active>false</active>
        <errorConditionFormula>and(Not(isnull( CreatedDate )),  ISPICKVAL(Reservable__r.Office_Work_Station_Type__c, &quot;HotDeskArea&quot;))</errorConditionFormula>
        <errorDisplayField>Reservable__c</errorDisplayField>
        <errorMessage>You can&apos;t select reservable with Office Type &quot;HotDeskArea&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reservable_buildings_same_as_Opportunity</fullName>
        <active>false</active>
        <description>Opportunity Reservable has to be from the same Building as Opportunity</description>
        <errorConditionFormula>Opportunity__r.Building__c  &lt;&gt;  Reservable__r.Building__c</errorConditionFormula>
        <errorDisplayField>Reservable__c</errorDisplayField>
        <errorMessage>You have to select the Reservable from the same Building as indicated on Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reservable_should_not_be_archived</fullName>
        <active>false</active>
        <description>If Reservable Archived or not available you can&apos;t add Opportunity Reservable</description>
        <errorConditionFormula>AND( NOT(ISNULL(CreatedDate)), NOT(ISNULL( Reservable__r.Archived_On__c ) ))</errorConditionFormula>
        <errorDisplayField>Reservable__c</errorDisplayField>
        <errorMessage>The Reservable you&apos;re selecting is archived. Please select another Reservable.</errorMessage>
    </validationRules>
</CustomObject>